==> DBLYBB/UAV_2023/UAV-Code/ANO_LX_FC M/DriversMcu/MSP432P401/Drivers/Drv_Uart.c <==
#include "Drv_Uart.h"
#include "Drv_UbloxGPS.h"
#include "ANO_DT_LX.h"
#include "Drv_AnoOf.h"

void DrvUart1Init(uint32_t baudrate)
{
	//注意：MSP432串口波特率设置比较特殊，建议使用如下网址进行计算，这里不再使用函数参数
	//http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/MSP430BaudRateConverter/index.html
	eUSCI_UART_ConfigV1 uartConfig500000 =
	{
		EUSCI_A_UART_CLOCKSOURCE_SMCLK,          // SMCLK Clock Source
		6,                       				// BRDIV
		0,                                       // UCxBRF
		0,                                      // UCxBRS 
		EUSCI_A_UART_NO_PARITY,                  // No Parity
		EUSCI_A_UART_LSB_FIRST,                  // MSB First
		EUSCI_A_UART_ONE_STOP_BIT,               // One stop bit
		EUSCI_A_UART_MODE,                       // UART mode
		EUSCI_A_UART_OVERSAMPLING_BAUDRATE_GENERATION,  // Oversampling
		EUSCI_A_UART_8_BIT_LEN                  // 8 bit data length
	};
	eUSCI_UART_ConfigV1 uartConfig115200 =
	{
		EUSCI_A_UART_CLOCKSOURCE_SMCLK,          // SMCLK Clock Source
		26,                       				// BRDIV
		1,                                       // UCxBRF
		0,                                      // UCxBRS 
		EUSCI_A_UART_NO_PARITY,                  // No Parity
		EUSCI_A_UART_LSB_FIRST,                  // MSB First
		EUSCI_A_UART_ONE_STOP_BIT,               // One stop bit
		EUSCI_A_UART_MODE,                       // UART mode
		EUSCI_A_UART_OVERSAMPLING_BAUDRATE_GENERATION,  // Oversampling
		EUSCI_A_UART_8_BIT_LEN                  // 8 bit data length
	};
	eUSCI_UART_ConfigV1 uartConfig38400 =
	{
		EUSCI_A_UART_CLOCKSOURCE_SMCLK,          // SMCLK Clock Source
		78,                       				// BRDIV
		2,                                       // UCxBRF
		0,                                      // UCxBRS 
		EUSCI_A_UART_NO_PARITY,                  // No Parity
		EUSCI_A_UART_LSB_FIRST,                  // MSB First
		EUSCI_A_UART_ONE_STOP_BIT,               // One stop bit
		EUSCI_A_UART_MODE,                       // UART mode
		EUSCI_A_UART_OVERSAMPLING_BAUDRATE_GENERATION,  // Oversampling
		EUSCI_A_UART_8_BIT_LEN                  // 8 bit data length
	};
	eUSCI_UART_ConfigV1 uartConfig19200 =
	{
		EUSCI_A_UART_CLOCKSOURCE_SMCLK,          // SMCLK Clock Source
		156,                       				// BRDIV
		4,                                       // UCxBRF
		0,                                      // UCxBRS 
		EUSCI_A_UART_NO_PARITY,                  // No Parity
		EUSCI_A_UART_LSB_FIRST,                  // MSB First
		EUSCI_A_UART_ONE_STOP_BIT,               // One stop bit
		EUSCI_A_UART_MODE,                       // UART mode
		EUSCI_A_UART_OVERSAMPLING_BAUDRATE_GENERATION,  // Oversampling
		EUSCI_A_UART_8_BIT_LEN                  // 8 bit data length
	};
	eUSCI_UART_ConfigV1 uartConfig9600 =
	{
		EUSCI_A_UART_CLOCKSOURCE_SMCLK,          // SMCLK Clock Source
		312,                       				// BRDIV
		8,                                       // UCxBRF
		0,                                      // UCxBRS 
		EUSCI_A_UART_NO_PARITY,                  // No Parity
		EUSCI_A_UART_LSB_FIRST,                  // MSB First
		EUSCI_A_UART_ONE_STOP_BIT,               // One stop bit
		EUSCI_A_UART_MODE,                       // UART mode
		EUSCI_A_UART_OVERSAMPLING_BAUDRATE_GENERATION,  // Oversampling
		EUSCI_A_UART_8_BIT_LEN                  // 8 bit data length
	};
	MAP_GPIO_setAsPeripheralModuleFunctionInputPin(GPIO_PORT_P1, GPIO_PIN2 | GPIO_PIN3, GPIO_PRIMARY_MODULE_FUNCTION);
	/* Configuring UART Module */
	if(baudrate == 9600)
		MAP_UART_initModule(EUSCI_A0_BASE, &uartConfig9600);
	if(baudrate == 19200)
		MAP_UART_initModule(EUSCI_A0_BASE, &uartConfig19200);
	if(baudrate == 38400)
		MAP_UART_initModule(EUSCI_A0_BASE, &uartConfig38400);
	if(baudrate == 115200)
		MAP_UART_initModule(EUSCI_A0_BASE, &uartConfig115200);
	if(baudrate == 500000)
		MAP_UART_initModule(EUSCI_A0_BASE, &uartConfig500000);
	/* Enable UART module */
	MAP_UART_enableModule(EUSCI_A0_BASE);
	/* Enabling interrupts */
    MAP_UART_enableInterrupt(EUSCI_A0_BASE, EUSCI_A_UART_RECEIVE_INTERRUPT);
	//MAP_UART_enableInterrupt(EUSCI_A2_BASE, EUSCI_A_UART_TRANSMIT_INTERRUPT);
    MAP_Interrupt_enableInterrupt(INT_EUSCIA0);
}

void DrvUart1SendBuf(u8 *data, u8 len)
{
	for(u8 i=0; i<len; i++)
	{
		U1TxDataTemp[U1TxInCnt++] = * ( data + i );
	}
	//如果没开发送中断，则打开发送中断
	if(! (UCA0IE & EUSCI_A_UART_TRANSMIT_INTERRUPT))
		MAP_UART_enableInterrupt(EUSCI_A0_BASE, EUSCI_A_UART_TRANSMIT_INTERRUPT);
}

void DrvUart2Init(uint32_t baudrate)
{
	//注意：MSP432串口波特率设置比较特殊，建议使用如下网址进行计算，这里不再使用函数参数
	//http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/MSP430BaudRateConverter/index.html
	eUSCI_UART_ConfigV1 uartConfig =
	{
		EUSCI_A_UART_CLOCKSOURCE_SMCLK,          // SMCLK Clock Source
		6,                       // BRDIV
		0,                                       // UCxBRF
		0,                                      // UCxBRS 
		EUSCI_A_UART_NO_PARITY,                  // No Parity
		EUSCI_A_UART_LSB_FIRST,                  // LSB First
		EUSCI_A_UART_ONE_STOP_BIT,               // One stop bit
		EUSCI_A_UART_MODE,                       // UART mode
		EUSCI_A_UART_OVERSAMPLING_BAUDRATE_GENERATION,  // Oversampling
		EUSCI_A_UART_8_BIT_LEN                  // 8 bit data length
	};
	MAP_GPIO_setAsPeripheralModuleFunctionInputPin(GPIO_PORT_P2, GPIO_PIN2 | GPIO_PIN3, GPIO_PRIMARY_MODULE_FUNCTION);
	/* Configuring UART Module */
	MAP_UART_initModule(EUSCI_A1_BASE, &uartConfig);
	/* Enable UART module */
	MAP_UART_enableModule(EUSCI_A1_BASE);
	/* Enabling interrupts */
    MAP_UART_enableInterrupt(EUSCI_A1_BASE, EUSCI_A_UART_RECEIVE_INTERRUPT);
	//MAP_UART_enableInterrupt(EUSCI_A2_BASE, EUSCI_A_UART_TRANSMIT_INTERRUPT);
	MAP_Interrupt_setPriority(INT_EUSCIA1, INT_PRIORITY_UART);
    MAP_Interrupt_enableInterrupt(INT_EUSCIA1);
}

void DrvUart2SendBuf(u8 *data, u8 len)
{
	for(u8 i=0; i<len; i++)
	{
		U2TxDataTemp[U2TxInCnt++] = * ( data + i );
	}
	//如果没开发送中断，则打开发送中断
	if(! (UCA1IE & EUSCI_A_UART_TRANSMIT_INTERRUPT))
		MAP_UART_enableInterrupt(EUSCI_A1_BASE, EUSCI_A_UART_TRANSMIT_INTERRUPT);
}

void DrvUart3Init(uint32_t baudrate)
{
	//注意：MSP432串口波特率设置比较特殊，建议使用如下网址进行计算，这里不再使用函数参数
	//http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/MSP430BaudRateConverter/index.html
	eUSCI_UART_ConfigV1 uartConfig =
	{
		EUSCI_A_UART_CLOCKSOURCE_SMCLK,          // SMCLK Clock Source
		6,                       // BRDIV
		0,                                       // UCxBRF
		0,                                      // UCxBRS 
		EUSCI_A_UART_NO_PARITY,                  // No Parity
		EUSCI_A_UART_LSB_FIRST,                  // MSB First
		EUSCI_A_UART_ONE_STOP_BIT,               // One stop bit
		EUSCI_A_UART_MODE,                       // UART mode
		EUSCI_A_UART_OVERSAMPLING_BAUDRATE_GENERATION,  // Oversampling
		EUSCI_A_UART_8_BIT_LEN                  // 8 bit data length
	};
	MAP_GPIO_setAsPeripheralModuleFunctionInputPin(GPIO_PORT_P3,GPIO_PIN2 | GPIO_PIN3, GPIO_PRIMARY_MODULE_FUNCTION);
	/* Configuring UART Module */
	MAP_UART_initModule(EUSCI_A2_BASE, &uartConfig);
	/* Enable UART module */
	MAP_UART_enableModule(EUSCI_A2_BASE);
	/* Enabling interrupts */
    MAP_UART_enableInterrupt(EUSCI_A2_BASE, EUSCI_A_UART_RECEIVE_INTERRUPT);
	//MAP_UART_enableInterrupt(EUSCI_A2_BASE, EUSCI_A_UART_TRANSMIT_INTERRUPT);
    MAP_Interrupt_enableInterrupt(INT_EUSCIA2);
}

void DrvUart3SendBuf(u8 *data, u8 len)
{
	u8 i;
    for (i = 0; i < len; i++)
    {
        U3TxDataTemp[U3TxInCnt++] = *(data + i);
    }
	
	//如果没开发送中断，则打开发送中断
	if(! (UCA2IE & EUSCI_A_UART_TRANSMIT_INTERRUPT))
		MAP_UART_enableInterrupt(EUSCI_A2_BASE, EUSCI_A_UART_TRANSMIT_INTERRUPT);
}

void DrvUart4Init(uint32_t baudrate)
{
	//注意：MSP432串口波特率设置比较特殊，建议使用如下网址进行计算，这里不再使用函数参数
	//http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/MSP430BaudRateConverter/index.html
	eUSCI_UART_ConfigV1 uartConfig =
	{
		EUSCI_A_UART_CLOCKSOURCE_SMCLK,          // SMCLK Clock Source
		6,                       // BRDIV
		0,                                       // UCxBRF
		0,                                      // UCxBRS 
		EUSCI_A_UART_NO_PARITY,                  // No Parity
		EUSCI_A_UART_LSB_FIRST,                  // MSB First
		EUSCI_A_UART_ONE_STOP_BIT,               // One stop bit
		EUSCI_A_UART_MODE,                       // UART mode
		EUSCI_A_UART_OVERSAMPLING_BAUDRATE_GENERATION,  // Oversampling
		EUSCI_A_UART_8_BIT_LEN                  // 8 bit data length
	};
	MAP_GPIO_setAsPeripheralModuleFunctionInputPin(GPIO_PORT_P9,GPIO_PIN6 | GPIO_PIN7, GPIO_PRIMARY_MODULE_FUNCTION);
	/* Configuring UART Module */
	MAP_UART_initModule(EUSCI_A3_BASE, &uartConfig);
	/* Enable UART module */
	MAP_UART_enableModule(EUSCI_A3_BASE);
	/* Enabling interrupts */
    MAP_UART_enableInterrupt(EUSCI_A3_BASE, EUSCI_A_UART_RECEIVE_INTERRUPT);
	//MAP_UART_enableInterrupt(EUSCI_A2_BASE, EUSCI_A_UART_TRANSMIT_INTERRUPT);
	MAP_Interrupt_setPriority(INT_EUSCIA3, INT_PRIORITY_UART);
    MAP_Interrupt_enableInterrupt(INT_EUSCIA3);
}

void DrvUart4SendBuf(u8 *data, u8 len)
{
	u8 i;
    for (i = 0; i < len; i++)
    {
        U4TxDataTemp[U4TxInCnt++] = *(data + i);
    }
	
	//如果没开发送中断，则打开发送中断
	if(! (UCA3IE & EUSCI_A_UART_TRANSMIT_INTERRUPT))
		MAP_UART_enableInterrupt(EUSCI_A3_BASE, EUSCI_A_UART_TRANSMIT_INTERRUPT);
}
